# discord-bot

./: .replit  examples.py  explications.py  keep_alive.py  main.py  pyproject.toml  unban.py
bot_files/: keep_alive.py  utils.py  var.py
cmd_files/: Files.py  files.py
cmd_others/: Compteur.py
documents/: perso.txt  presentation.md  txt.md
events/: Join.py
manage_bot/: Close.py  Ping.py  Status.py
manage_members/: Ban.py  Delete.py  Kick.py
